[gd_scene load_steps=15 format=2]

[ext_resource path="res://BuchOpenGameArt/dungeon_sheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy/MovementAI.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Death.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=4]
[ext_resource path="res://Enemy/DamageArea.gd" type="Script" id=5]
[ext_resource path="res://Scenes/BloodEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://BlinkingMaterial.tres" type="Material" id=7]
[ext_resource path="res://Enemy/DefaultEnemyStates/IdleAI.gd" type="Script" id=8]
[ext_resource path="res://StateMachine/FiniteStateMachine.gd" type="Script" id=9]
[ext_resource path="res://Enemy/DefaultEnemyStates/Staggered.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Particles2D.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 370, 112, 12, 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.66667, 8.33333 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.33333

[node name="Enemy" type="KinematicBody2D" groups=["ENEMIES"]]
scale = Vector2( 0.6, 0.6 )
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )
DamageEffect = ExtResource( 6 )
DeathEffect = ExtResource( 11 )
startStatePath = NodePath("FiniteStateMachine/IdleAI")
speed = 15

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.98682e-07, 1.98682e-07 )
shape = SubResource( 1 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )
maximumHealth = 150

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="DamageArea"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="IdleAI" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 8 )
direction = Vector2( 0, -1 )

[node name="Staggered" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 10 )
staggeredSeconds = 0.25

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 3 )

[node name="DeathTween" type="Tween" parent="."]

[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="damageTaken" from="Health" to="FiniteStateMachine/IdleAI" method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="Health" to="." method="_on_Health_healthDepleted"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageArea/Timer" to="DamageArea" method="_on_Timer_timeout"]
